default/objects/AlertIntegration__e/AlertIntegration__e.object-meta.xml
<CustomObject>
    <label>AlertIntegration</label>
    <pluralLabel>AlertIntegrations</pluralLabel>
</CustomObject>