default/objects/AlertIntegration__e/fields/MessageField__c.field-meta.xml
<CustomField>
    <fullName>MessageField__c</fullName>
    <label>Message Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>