default/objects/AlertIntegration__e/fields/OrderCreated__c.field-meta.xml
<CustomField>
    <fullName>OrderCreated__c</fullName>
    <label>Order Created</label>
    <length>255</length>
    <type>Text</type>
</CustomField>